test/bad/generics/call04.px

func f<T>(g: T->T) def
    return

f(min)
